# weather_app_test_task

./: .editorconfig  .env_template  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/app/: settings.py  urls.py
app/templates/: base.html
app/weather/: forms.py  urls.py  utils.py  views.py
app/weather/templates/weather/: error.html  index.html  page_not_found.html  weather_display.html
deploy/: .env_template  docker-compose.yml
deploy/nginx/conf.d/: nginx.conf
